--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>template.inte</title>
+  <title>meJob 咪價</title>
   <link rel="icon" href="/favicon.ico">
   <style>
     .js-required>div {
